--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1>Kicks Lease 🚀</h1>
-  <p>Trade your kicks </p>
-  <%= link_to "Add Kicks", new_shoe_path %>
+  <h4>Trade your kicks today❗️ </h4>
+  <%= link_to "Add Kicks", new_shoe_path, class: "btn btn-outline-primary" %>
 </div>
