Shoe and Booking index and new

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,9 +3,15 @@
 
   <ul>
     <% @bookings.each do |bk| %>
+    <li>
+      <h4><%= bk.shoe.title %></h4>
+      <h6><%= bk.user.email %></h6>
+      <h6><%= bk.end_date %></h6>
+
+    </li>
     <% end %>
   </ul>
 
-src="http://res.cloudinary.com/dyr22jlmp/image/upload/c_fill,h_200,w_300/z39d2odnfqpfew0lwtplt2ukhxpd"
+
 
 </div>
