--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -7,6 +7,7 @@
     <%= link_to "Book Kicks", new_shoe_booking_path(shoe), class: "btn btn-outline-primary" %>
     <% if current_user == shoe.user %>
       <%= link_to "Delete Kicks", shoe_path(shoe), data: {turbo_method: :delete, turbo_confirm: "Are you sure"}, class: "btn btn-outline-primary" %>
+      <%= link_to "Edit", edit_shoe_path(shoe), class: "btn btn-outline-primary" %>
     <% end %>
   </li>
   <% end %>
