--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,8 +9,8 @@
       <li class="nav-item active ">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/shoes">Kicks</a>
+      <li>
+        <a class="nav-link" href="/shoes/new">Add Kicks</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -28,5 +28,10 @@
       <input name= "search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button for = "search" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+    <% if user_signed_in? %>
+      <p><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"text-decoration-none px-4 text-secondary"%></p>
+      <% else %>
+      <p><%= link_to "Login", new_user_session_path, class:"text-decoration-none px-4 text-secondary"%></p>
+    <% end %>
   </div>
 </nav>
