Shoe index styles

--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -1,7 +1,9 @@
+<div class="banner">
+  <h1 class="title">KICKS LEASE </h1>
+  <h4>Trade your kicks today</h4>
+</div>
 <div class="container">
-  <h1>Kicks Lease 🚀</h1>
-  <h4>Trade your kicks today❗️ </h4>
-  <ul>
+  <ul class= "kicks-display">
     <%  @shoes.each do |shoe| %>
     <li class="shoe-card">
       <h4><%=  shoe.title %></h4>
