--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,36 @@
 // Specific CSS for your home-page
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');
+
+*, h1, h2, h3, h4, h5, h6{
+  font-family: 'Sedgwick Ave', cursive;
+}
+
+.title{
+  font-family: 'Bungee Shade', cursive;
+  text-shadow: 1px 1px 2px black;
+  font-size: 64px;
+}
+
+
+.kicks-display{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.shoe-card {
+  padding: 16px;
+  margin: 8px;
+  list-style: none;
+}
+
+.banner{
+  padding: 16px;
+  width: 100%;
+  height: 500px;
+  // background-image: url("https://wallpapers.com/images/hd/sneaker-nike-assortment-v80opm3p8x5v3jse.jpg");
+  background-image: url("https://wallpapers.com/images/featured/x499s7jambwdigab.jpg");
+  background-position: center;
+  color: white;
+}
