--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,9 @@
       <li>
         <a class="nav-link" href="/shoes/new">Add Kicks</a>
       </li>
+       <li>
+        <a class="nav-link" href="/bookings">Bookings</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
