--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -5,11 +5,14 @@
 <div class="container">
   <ul class= "kicks-display">
     <%  @shoes.each do |shoe| %>
-    <li class="shoe-card">
-      <h4><%=  shoe.title %></h4>
-      <p><%= shoe.description %></p>
-      <p><%= cl_image_tag shoe.photo.key, height: 200, width: 300, crop: :fill %></p>
-      <%= link_to "Book Kicks", new_shoe_booking_path(shoe), class: "btn btn-outline-primary" %>
+    <li class="shoe-card" >
+      <p><%= cl_image_tag shoe.photo.key, height: 200, width: 300, crop: :fill, class:"img" %></p>
+      <h4 class="px-3"><%= shoe.title %></h4>
+      <div class="px-3 row justifuy-content-between">
+        <p class="col"><%= shoe.description%></p>
+        <p class="col pr-4"><%= shoe.price %></p>
+      </div>
+      <%= link_to "Book Kicks", new_shoe_booking_path(shoe), class: "btn btn-outline-primary px-3" %>
       <% if current_user == shoe.user %>
         <%= link_to "Delete Kicks", shoe_path(shoe), data: {turbo_method: :delete, turbo_confirm: "Are you sure"}, class: "btn btn-outline-primary" %>
         <%= link_to "Edit", edit_shoe_path(shoe), class: "btn btn-outline-primary" %>
