--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -5,8 +5,11 @@
 <div class="container">
   <ul class= "kicks-display">
     <%  @shoes.each do |shoe| %>
+
     <li class="shoe-card" >
+    <%= link_to shoe_path(shoe) do  %>
       <p><%= cl_image_tag shoe.photo.key, height: 200, width: 300, crop: :fill, class:"img" %></p>
+       <% end %>
       <h4 class="px-3"><%= shoe.title %></h4>
       <div class="px-3 row justifuy-content-between">
         <p class="col"><%= shoe.description%></p>
@@ -18,6 +21,7 @@
         <%= link_to "Edit", edit_shoe_path(shoe), class: "btn btn-outline-primary" %>
       <% end %>
     </li>
+
     <% end %>
   </ul>
 </div>
