--- a/app/views/shoes/index.html.erb
+++ b/app/views/shoes/index.html.erb
@@ -5,11 +5,9 @@
 <div class="container">
   <ul class= "kicks-display">
     <%  @shoes.each do |shoe| %>
-
     <li class="shoe-card" >
     <%= link_to shoe_path(shoe) do  %>
       <p><%= cl_image_tag shoe.photo.key, height: 200, width: 300, crop: :fill, class:"img" %></p>
-
       <div class="card-text">
         <h4><%= shoe.title %></h4>
         <div class="card-desc-area">
@@ -24,7 +22,7 @@
         <% end %>
       </div>
     </li>
-
+    <% end %>
     <% end %>
   </ul>
 </div>
