edited all the forms with positioning, style and background

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,10 @@
-<div class="container">
-  <h1>New Booking</h1>
-  <%= simple_form_for [ @shoe, @booking ]  do |f| %>
-    <%= f.input :start_date, as: :date, html5: true %>
-    <%= f.input :end_date, as: :date, html5: true %>
-    <%= f.submit %>
-  <% end %>
+<div class="login-body">
+  <div class="container-form">
+    <h1>New Booking</h1>
+    <%= simple_form_for [ @shoe, @booking ]  do |f| %>
+      <%= f.input :start_date, as: :date, html5: true %>
+      <%= f.input :end_date, as: :date, html5: true %>
+      <%= f.submit %>
+    <% end %>
+  </div>
 </div>
