--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand mx-5" href="#">Kickslease</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,6 @@
     </ul>
     <form class="form-inline my-2 my-lg-0 row pr-8 mx-5 d-flex">
       <input name= "search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button for = "search" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
     <% if user_signed_in? %>
       <p><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"text-decoration-none px-4 text-secondary"%></p>
