--- a/app/views/shoes/new.html.erb
+++ b/app/views/shoes/new.html.erb
@@ -1,10 +1,12 @@
-<div class="container">
-  <%= simple_form_for(@shoe) do |f| %>
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :sizes %>
-    <%= f.input :price %>
-    <%= f.input :photo, as: :file %>
-    <%= f.submit %>
-  <% end %>
+<div class="login-body">
+  <div class="container-form">
+    <%= simple_form_for(@shoe) do |f| %>
+      <%= f.input :title %>
+      <%= f.input :description %>
+      <%= f.input :sizes %>
+      <%= f.input :price %>
+      <%= f.input :photo, as: :file %>
+      <%= f.submit %>
+    <% end %>
+  </div>
 </div>
