debugged buttons and styled

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -79,11 +79,28 @@ p{
 }
 
 
-.button:hover{
+.bbutton{
+  transition: 1s;
+  display: inline-block;
+  width: 116px;
+  background-color:rgba(0, 0, 0, 0.888);
+  border-radius: 8px;
+  color: white;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.bbutton:hover{
   transition: 1s;
   color:black;
-  background-color: turquoise;
+  background-color: rgb(222, 222, 222);
+  box-shadow: 1px 1px 4px gray;
 
+}
+
+svg:hover{
+  transition: 1s;
+  fill: gray;
 }
 
 
