--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -1,11 +1,20 @@
 
 
 
-  <div class="container">
+<div class="container">
   <div class="card-container">
     <p><%= link_to "back", root_path, class:"back-button "%></p>
       <div class="shoe-show">
         <div class="shoe-description">
+          <% if @shoe.user == current_user  %>
+            <%= link_to shoe_path(@shoe), data: {turbo_method: :delete, turbo_confirm: "Are you sure"} do %>
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+  <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+</svg>
+            </div>
+            <% end %>
+          <% end %>
           <div class="shoe-title-des">
             <h1><%= @shoe.title %></h1>
             <h3><%= @shoe.description %></h3>
@@ -14,15 +23,12 @@
             <h6>Price : £<%= @shoe.price %></h6>
             <p>Size : <%= @shoe.sizes %></p>
           </div>
-            <div class="shoe-button">
-            <%= link_to "Book Kicks", new_shoe_booking_path(@shoe), class:"button" %>
-            <% if current_user == @shoe.user %>
-            <%= link_to "Delete Kicks", shoe_path(@shoe), data: {turbo_method: :delete, turbo_confirm: "Are you sure"}, class: "button" %>
-            <% end %>
-            </div>
+          <% if current_user != @shoe.user %>
+          <%= link_to "Book Kicks", new_shoe_booking_path(@shoe), class: "bbutton" %>
+          <% end %>
           </div>
         <div class="shoe-image">
           <%= cl_image_tag @shoe.photo.key, height: 500, width: 700, crop: :fill, style: "border-radius: 8px"%>
         </div>
-      </div>
-    </div>
+  </div>
+</div>
