Touched the seed a bit

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,12 +22,14 @@ p{
   margin-top: 36px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-row-gap: 20px;
+  grid-row-gap: 50px;
+  justify-content: center;
+
 }
 
 .shoe-card {
   height: fit-content;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -35,9 +37,9 @@ p{
   padding: 0px;
   margin: 8px;
   list-style: none;
-  background-color: whitesmoke;
+  background-color: white;
   width: 300px;
-  border-radius: 8px;
+  border-radius: 12px;
   overflow: hidden;
 
 }
