--- a/app/assets/stylesheets/pages/_shoe_display.scss
+++ b/app/assets/stylesheets/pages/_shoe_display.scss
@@ -8,15 +8,18 @@ body, html {
 
 .container {
   padding-top: 16px;
-  position: absolute;
+  // position: absolute;
   filter: none !important;
-
+  width: 100%;
+  height: 100%;
 }
 
 
 .shoe-show {
   display: flex;
   justify-content: space-evenly;
+  width: 100%;
+  height: 100%;
 }
 
 .back-button {
