--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -1,7 +1,4 @@
-
-
-
-  <div class="container">
+<div class="container">
   <div class="card-container">
     <p><%= link_to "back", root_path, class:"back-button "%></p>
       <div class="shoe-show">
@@ -26,3 +23,5 @@
         </div>
       </div>
     </div>
+<%= render "shared/footer_other" %>
+</div>
