--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,14 +70,14 @@ p{
     padding: 16px;
     text-decoration: none;
   }
-  transition: all ease-in-out;
+  transition: all 0.6s ease-in-out;
 }
 
 .card-text, .card-desc-area, .button{
   // box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.597);
   height: 0;
   overflow: hidden;
-  transition: 2s;
+  transition: 0.5s;
 }
 
 
