search bar activated

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,13 +15,23 @@
        <li>
         <a class="nav-link" href="/bookings">Bookings</a>
       </li>
-      <li>
-        <%= link_to "My Kicks", user_path(current_user), class:"nav-link" %>
-      </li>
+      <% if !current_user.nil? %>
+        <li>
+          <%= link_to "My Kicks", user_path(current_user), class:"nav-link" %>
+        </li>
+      <% end %>
     </ul>
-    <form class="form-inline my-2 my-lg-0 row pr-8 mx-5 d-flex">
-      <input name= "search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    </form>
+    <%= form_with url: root_path, method: :get, class: "form-inline my-2 my-lg-0 row pr-8 mx-5 d-flex" do %>
+    <%= text_field_tag :query,
+    params[:query],
+    class: "form-control mr-sm-2",
+    placeholder: "Find kicks"
+    %>
+    <%# <%= submit_tag "Search", class: "bbutton" %>
+    <% end %>
+    <%# <form class="form-inline my-2 my-lg-0 row pr-8 mx-5 d-flex">
+      <input name= "query" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    </form> %>
     <% if user_signed_in? %>
       <p><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"text-decoration-none px-4 text-secondary"%></p>
       <% else %>
