--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,16 +1,27 @@
-<div class="container">
+<div class="container-booking">
   <h1>My Bookings!</h1>
-
-  <ul class= "booking-card">
+  <ul class= "booking-display">
     <% @bookings.each do |bk| %>
-    <li>
-      <h4><%= bk.shoe.title %></h4>
-      <h6><%= bk.user.email %></h6>
-      <h6><%= bk.end_date %></h6>
-      <%= link_to "Delete Booking", booking_path(bk), data: {turbo_method: :delete, turbo_confirm: "Are you sure"}, class: "btn btn-outline-primary" %>
-
-    </li>
+      <div class= "booking-card">
+        <div class="booking-description">
+          <h4><%= bk.shoe.title %></h4>
+          <h6><%= bk.shoe.user.email %></h6>
+          <% days = ((bk.end_date - bk.start_date) / 86400).to_i %>
+          <h6><%="#{days} days"%></h6>
+            <h6><%= "£ #{days * bk.shoe.price}" %></h6>
+          <% if bk.user == current_user  %>
+            <%= link_to booking_path(bk), data: {turbo_method: :delete, turbo_confirm: "Are you sure"} do %>
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+                </svg>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+        <%= cl_image_tag bk.shoe.photo.key, height: 200, width: 300, crop: :fill, class:"img-shoe"%>
+      </div>
     <% end %>
   </ul>
-<%= render "shared/footer_other" %>
+  <%= render "shared/footer_other" %>
 </div>
