--- a/app/views/shoes/show.html.erb
+++ b/app/views/shoes/show.html.erb
@@ -18,8 +18,8 @@
             <h3><%= @shoe.description %></h3>
           </div>
           <div class="shoe-price-sizes">
-            <h6>Price : £<%= @shoe.price %></h6>
-            <p>Size : <%= @shoe.sizes %></p>
+            <h5>Price : £<%= @shoe.price.to_i %>  per day</h5>
+            <h6>Size : <%= @shoe.sizes %></h6>
           </div>
           <% if current_user != @shoe.user %>
           <%= link_to "Book Kicks", new_shoe_booking_path(@shoe), class: "bbutton" %>
